src/objects/Transaction_Limit__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Debit_Allowed_per_Day__c</fullName>
        <label>Maximum Debit Allowed per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Debit_Allowed_per_Month__c</fullName>
        <label>Maximum Debit Allowed per Month</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Debit_Allowed_per_Transaction__c</fullName>
        <label>Maximum Debit Allowed per Transaction</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Transactions_Allowed_per_Day__c</fullName>
        <label>Maximum Transactions Allowed per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Transactions_Allowed_per_Month__c</fullName>
        <label>Maximum Transactions Allowed per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Transaction Limit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_per_Day</fullName>
        <active>true</active>
        <errorConditionFormula>Maximum_Debit_Allowed_per_Day__c &gt; 5000</errorConditionFormula>
        <errorDisplayField>Maximum_Debit_Allowed_per_Day__c</errorDisplayField>
        <errorMessage>Debit amount exided then 5000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_per_Month</fullName>
        <active>true</active>
        <errorConditionFormula>Maximum_Debit_Allowed_per_Month__c &gt; 500000</errorConditionFormula>
        <errorDisplayField>Maximum_Debit_Allowed_per_Month__c</errorDisplayField>
        <errorMessage>Maximum Amount Excided Allow Amount less then 500000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_per_Transaction</fullName>
        <active>true</active>
        <errorConditionFormula>Maximum_Debit_Allowed_per_Transaction__c &lt; 20000</errorConditionFormula>
        <errorDisplayField>Maximum_Debit_Allowed_per_Transaction__c</errorDisplayField>
        <errorMessage>You have reached you limit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Transactions_Allowed_per_Day</fullName>
        <active>true</active>
        <errorConditionFormula>Maximum_Transactions_Allowed_per_Day__c &gt; 4</errorConditionFormula>
        <errorDisplayField>Maximum_Debit_Allowed_per_Day__c</errorDisplayField>
        <errorMessage>You have reached you limit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Transactions_Allowed_per_Month</fullName>
        <active>true</active>
        <errorConditionFormula>Maximum_Transactions_Allowed_per_Month__c &gt; 9</errorConditionFormula>
        <errorDisplayField>Maximum_Transactions_Allowed_per_Month__c</errorDisplayField>
        <errorMessage>Transaction limit excided</errorMessage>
    </validationRules>
</CustomObject>